styles: changes in color scheme fix(layout): cards now aligned

--- a/portfolio/src/style.css
+++ b/portfolio/src/style.css
@@ -125,16 +125,20 @@
   }
 
   .tech__badge {
-    @apply rounded-full border border-white/30 bg-white/20 px-4 py-2 text-sm font-medium backdrop-blur transition-transform ease-in-out hover:-translate-y-0.5 hover:bg-white/30;
+    @apply rounded-full border border-white/30 bg-blue-950/20 px-4 py-2 text-sm font-medium backdrop-blur transition-transform ease-in-out hover:-translate-y-0.5 hover:bg-blue-500/30;
   }
 
   .project__card {
-    @apply transform overflow-hidden rounded-xl bg-white shadow-md transition-transform hover:-translate-y-1 hover:shadow-lg;
+    @apply transform overflow-hidden rounded-xl bg-white shadow-md transition-transform hover:-translate-y-1 hover:shadow-lg md:grid;
   }
 
   .project__image {
     @apply flex h-52 items-center justify-center overflow-hidden bg-blue-200 text-5xl text-black;
   }
+
+  /* .project__content:nth-child(even) {
+     @apply md:min-h-69 lg:min-h-0; 
+  } */
 
   .project__tech-tag {
     @apply rounded-full bg-gray-100 px-3 py-1 text-xs font-medium text-[hsl(205,100%,31%)];
